--- a/calcul1.html
+++ b/calcul1.html
@@ -28,5 +28,12 @@
           </tr>
 
     </table>
+<script>
+  function one(){
+    e=document.getElementById('ecran').value;
+    e+='1'
+  }
 
+
+</script>
 </head>
