afichaage de number

--- a/calcul1.html
+++ b/calcul1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <head>
     <input type="text" id ='ecran'><br>
@@ -30,10 +31,63 @@
     </table>
 <script>
   function one(){
-    e=document.getElementById('ecran').value;
-    e+='1'
-  }
+    document.getElementById('ecran').value+=1;
 
+  }
+function two(){
+    document.getElementById('ecran').value+=2;
+
+  }
+function three(){
+    document.getElementById('ecran').value+=3;
+
+  }
+function four(){
+    document.getElementById('ecran').value+=4;
+
+  }
+function five(){
+    document.getElementById('ecran').value+=5;
+
+  }
+function six(){
+    document.getElementById('ecran').value+=6;
+
+  }
+function seven(){
+    document.getElementById('ecran').value+=7;
+
+  }
+function eight(){
+    document.getElementById('ecran').value+=8;
+
+  }
+function nine(){
+    document.getElementById('ecran').value+=9
+
+  }
+function zero(){
+	document.getElementById('ecran').value+=0
+  }
+function pls(){
+	document.getElementById('ecran').value+='+';
+
+  }
+  function ce(){
+    document.getElementById('ecran').value="";
+
+  }
+function moin(){
+    document.getElementById('ecran').value+='-';
+
+  }
+ function virg(){
+    document.getElementById('ecran').value+=',';
+ }
+function fois(){
+   document.getElementById('ecran').value+='*';
+ }
+ 
 
 </script>
 </head>
