--- a/calcul1.html
+++ b/calcul1.html
@@ -109,9 +109,8 @@ function fois(){
       res=x.substr(0,i);
       x=x.substr(i,x.length);
     }
-
   }
-
+document.getElementById('ecan')=res;
  }
 
 </script>
