final final final

--- a/calcul1.html
+++ b/calcul1.html
@@ -92,7 +92,7 @@ function fois(){
  function show(){
     
     x=document.getElementById('ecran').value;
-    x=eval(x);
+    x=eval(x); //calcul work 
     document.getElementById('ecran').value=x;
 
  }
